[IMP] fix pre-commit

--- a/maintenance_request_duplicated/views/maintenance_request.xml
+++ b/maintenance_request_duplicated/views/maintenance_request.xml
@@ -1,35 +1,53 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <!-- Copyright 2019 Creu Blanca
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
-
 <odoo>
-
     <record model="ir.ui.view" id="hr_equipment_request_view_form">
-        <field name="name">maintenance.request.form (in maintenance_request_duplicated)</field>
+        <field
+            name="name"
+        >maintenance.request.form (in maintenance_request_duplicated)</field>
         <field name="model">maintenance.request</field>
-        <field name="inherit_id" ref="cb_maintenance_project.maintenance_project_form_view"/>
+        <field
+            name="inherit_id"
+            ref="cb_maintenance_project.maintenance_project_form_view"
+        />
         <field name="arch" type="xml">
             <button name="archive_equipment_request" position="before">
-                <button string="Mark as Duplicated" name="%(maintenance_request_duplicated.wizard_request_duplicated_act_window)d"
-                        type="action" groups="maintenance.group_equipment_manager"
-                        attrs="{'invisible': [('duplicated_parent_id', '!=', False)]}"/>
+                <button
+                    string="Mark as Duplicated"
+                    name="%(maintenance_request_duplicated.wizard_request_duplicated_act_window)d"
+                    type="action"
+                    groups="maintenance.group_equipment_manager"
+                    attrs="{'invisible': [('duplicated_parent_id', '!=', False)]}"
+                />
             </button>
             <field name="owner_user_id" position="before">
-                <field name="duplicated_parent_id" attrs="{'invisible': [('duplicated_parent_id', '=', False)]}"/>
+                <field
+                    name="duplicated_parent_id"
+                    attrs="{'invisible': [('duplicated_parent_id', '=', False)]}"
+                />
             </field>
             <field name="maintenance_type" position="after">
-                <field name="duplicated_ids" attrs="{'invisible': [('duplicated_ids', '=', [])]}">
+                <field
+                    name="duplicated_ids"
+                    attrs="{'invisible': [('duplicated_ids', '=', [])]}"
+                >
                     <tree>
-                        <field name="name"/>
-                        <field name="request_date"/>
-                        <field name="owner_user_id"/>
-                        <field name="user_id"/>
-                        <field name="stage_id"/>
-                        <button name="deduplicate" type="object" icon="fa-trash" class='oe_edit_only oe_inline oe_stat_button' string="Deduplicate"/>
+                        <field name="name" />
+                        <field name="request_date" />
+                        <field name="owner_user_id" />
+                        <field name="user_id" />
+                        <field name="stage_id" />
+                        <button
+                            name="deduplicate"
+                            type="object"
+                            icon="fa-trash"
+                            class='oe_edit_only oe_inline oe_stat_button'
+                            string="Deduplicate"
+                        />
                     </tree>
                 </field>
             </field>
         </field>
     </record>
-
 </odoo>
