--- a/maintenance_equipment_purchase/views/purchase_order.xml
+++ b/maintenance_equipment_purchase/views/purchase_order.xml
@@ -1,30 +1,37 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <!-- Copyright 2019 Creu Blanca
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
-
 <odoo>
-
     <record model="ir.ui.view" id="purchase_order_form_view">
-        <field name="name">purchase.order.form (in maintenance_equipment_purchase)</field>
+        <field
+            name="name"
+        >purchase.order.form (in maintenance_equipment_purchase)</field>
         <field name="model">purchase.order</field>
-        <field name="inherit_id" ref="purchase.purchase_order_form"/>
+        <field name="inherit_id" ref="purchase.purchase_order_form" />
         <field name="arch" type="xml">
-
             <xpath expr="//div[@name='button_box']">
-                <button name="view_equipments" type="object" icon="fa-laptop"
-                        attrs="{'invisible': ['|', ('equipment_count', '=', 0), ('state', 'not in', ['purchase', 'done'])]}">
-                    <field name="equipment_count" widget="statinfo"
-                           string="Equipments"/>
+                <button
+                    name="view_equipments"
+                    type="object"
+                    icon="fa-laptop"
+                    attrs="{'invisible': ['|', ('equipment_count', '=', 0), ('state', 'not in', ['purchase', 'done'])]}"
+                >
+                    <field
+                        name="equipment_count"
+                        widget="statinfo"
+                        string="Equipments"
+                    />
                 </button>
             </xpath>
             <field name="price_subtotal" position="after">
-                <field name="product_type" invisible="1"/>
-                <button name="generate_equipments" icon="fa-laptop" type="object"
-                        attrs="{'invisible': [('product_type', '!=', 'equipment')], 'column_invisible': [('parent.state', 'not in', ['purchase', 'done'])]}"/>
+                <field name="product_type" invisible="1" />
+                <button
+                    name="generate_equipments"
+                    icon="fa-laptop"
+                    type="object"
+                    attrs="{'invisible': [('product_type', '!=', 'equipment')], 'column_invisible': [('parent.state', 'not in', ['purchase', 'done'])]}"
+                />
             </field>
         </field>
     </record>
-
-
-
 </odoo>
