--- a/cb_maintenance_project/views/maintenance_request.xml
+++ b/cb_maintenance_project/views/maintenance_request.xml
@@ -1,122 +1,192 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <!-- Copyright 2019 Creu Blanca
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
-
 <odoo>
-
     <record model="ir.ui.view" id="maintenance_project_form_view">
         <field name="name">maintenance.request.form (in cb_maintenance_project)</field>
         <field name="model">maintenance.request</field>
-        <field name="inherit_id" ref="cb_maintenance.hr_equipment_request_view_form"/>
+        <field name="inherit_id" ref="cb_maintenance.hr_equipment_request_view_form" />
         <field name="arch" type="xml">
             <field name="name" position="before">
-                <field name="is_project" invisible="1"/>
-                <field name="parent_id" invisible="1"/>
-                <i class="fa fa-home" attrs="{'invisible': ['|', ('is_project', '=', True), ('maintenance_type', '!=', 'preventive')]}" style="margin-right: 10px"/>
-                <i class="fa fa-tools" attrs="{'invisible': ['|', ('is_project', '=', True), ('maintenance_type', '!=', 'corrective')]}" style="margin-right: 10px"/>
-                <i class="fa fa-project-diagram" attrs="{'invisible': [('is_project', '=', False)]}" style="margin-right: 10px"/>
+                <field name="is_project" invisible="1" />
+                <field name="parent_id" invisible="1" />
+                <i
+                    class="fa fa-home"
+                    attrs="{'invisible': ['|', ('is_project', '=', True), ('maintenance_type', '!=', 'preventive')]}"
+                    style="margin-right: 10px"
+                />
+                <i
+                    class="fa fa-tools"
+                    attrs="{'invisible': ['|', ('is_project', '=', True), ('maintenance_type', '!=', 'corrective')]}"
+                    style="margin-right: 10px"
+                />
+                <i
+                    class="fa fa-project-diagram"
+                    attrs="{'invisible': [('is_project', '=', False)]}"
+                    style="margin-right: 10px"
+                />
             </field>
-
             <field name="owner_user_id" position="before">
-                <field name="parent_id" attrs="{'invisible': ['|', ('is_project', '=', False), ('parent_id', '=', False)]}"/>
+                <field
+                    name="parent_id"
+                    attrs="{'invisible': ['|', ('is_project', '=', False), ('parent_id', '=', False)]}"
+                />
             </field>
             <field name="priority" position="attributes">
-                <attribute name="attrs">{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
+                <attribute
+                    name="attrs"
+                >{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
             </field>
             <field name="equipment_id" position="attributes">
-                <attribute name="attrs">{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
+                <attribute
+                    name="attrs"
+                >{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
             </field>
             <field name="maintenance_type" position="attributes">
-                <attribute name="attrs">{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
+                <attribute
+                    name="attrs"
+                >{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
             </field>
             <field name="technician_id" position="attributes">
-                <attribute name="attrs">{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
+                <attribute
+                    name="attrs"
+                >{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
             </field>
             <field name="owner_user_id" position="attributes">
-                <attribute name="attrs">{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
+                <attribute
+                    name="attrs"
+                >{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
             </field>
             <xpath expr="//field[@name='schedule_date']/.." position="attributes">
-                <attribute name="attrs">{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
+                <attribute
+                    name="attrs"
+                >{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
             </xpath>
             <button name="archive_equipment_request" position="before">
-                <button string="Add Issue" name="%(cb_maintenance_project.wizard_create_project_issue_act_window)d"
-                        type="action" attrs="{'invisible': ['|', ('is_project', '=', False), ('parent_id', '!=', False)]}" context="{'default_request_id': active_id}"/>
-                <button string="Assign to Project" name="%(cb_maintenance_project.wizard_group_in_project_act_window)d"
-                        type="action" attrs="{'invisible': [('is_project', '=', True)]}"/>
+                <button
+                    string="Add Issue"
+                    name="%(cb_maintenance_project.wizard_create_project_issue_act_window)d"
+                    type="action"
+                    attrs="{'invisible': ['|', ('is_project', '=', False), ('parent_id', '!=', False)]}"
+                    context="{'default_request_id': active_id}"
+                />
+                <button
+                    string="Assign to Project"
+                    name="%(cb_maintenance_project.wizard_group_in_project_act_window)d"
+                    type="action"
+                    attrs="{'invisible': [('is_project', '=', True)]}"
+                />
             </button>
             <field name="priority" position="after">
-                <field name="currency_id" invisible="1"/>
-                <field name="cost" widget="monetary" options="{'currency_field': 'currency_id'}"
-                       attrs="{'invisible': [('is_project', '=', False), ('purchases_count', '=', 0)]}"/>
-                <field name="real_cost" widget="monetary" options="{'currency_field': 'currency_id'}"
-                       attrs="{'invisible': [('is_project', '=', False), ('purchases_count', '=', 0)]}"/>
+                <field name="currency_id" invisible="1" />
+                <field
+                    name="cost"
+                    widget="monetary"
+                    options="{'currency_field': 'currency_id'}"
+                    attrs="{'invisible': [('is_project', '=', False), ('purchases_count', '=', 0)]}"
+                />
+                <field
+                    name="real_cost"
+                    widget="monetary"
+                    options="{'currency_field': 'currency_id'}"
+                    attrs="{'invisible': [('is_project', '=', False), ('purchases_count', '=', 0)]}"
+                />
             </field>
         </field>
     </record>
-
     <record model="ir.ui.view" id="maintenance_request_kanban_view">
         <field name="name">maintenance.request.kanban (in cb_maintenance)</field>
         <field name="model">maintenance.request</field>
-        <field name="inherit_id" ref="maintenance.hr_equipment_request_view_kanban"/>
+        <field name="inherit_id" ref="maintenance.hr_equipment_request_view_kanban" />
         <field name="arch" type="xml">
             <field name="name" position="before">
-                <field name="maintenance_type" t-if="1==0"/>
-                <field name="is_project" t-if="1==0"/>
-                <i class="fa fa-home" t-if="record.maintenance_type.raw_value == 'preventive' and !record.is_project.raw_value"/>
-                <i class="fa fa-tools" t-if="record.maintenance_type.raw_value == 'corrective' and !record.is_project.raw_value"/>
-                <i class="fa fa-project-diagram" t-if="record.is_project.raw_value"/>
+                <field name="maintenance_type" t-if="1==0" />
+                <field name="is_project" t-if="1==0" />
+                <i
+                    class="fa fa-home"
+                    t-if="record.maintenance_type.raw_value == 'preventive' and !record.is_project.raw_value"
+                />
+                <i
+                    class="fa fa-tools"
+                    t-if="record.maintenance_type.raw_value == 'corrective' and !record.is_project.raw_value"
+                />
+                <i class="fa fa-project-diagram" t-if="record.is_project.raw_value" />
             </field>
         </field>
     </record>
-
     <record model="ir.ui.view" id="hr_equipment_request_view_form_button_box">
-        <field name="name">maintenance.request.form (in maintenance_equipment_purchase)</field>
+        <field
+            name="name"
+        >maintenance.request.form (in maintenance_equipment_purchase)</field>
         <field name="model">maintenance.request</field>
-        <field name="inherit_id" ref="base_maintenance.equipment_request_view_form"/>
+        <field name="inherit_id" ref="base_maintenance.equipment_request_view_form" />
         <field name="arch" type="xml">
             <div name="button_box" position="inside">
-                <field name="child_ids" invisible="1"/>
-                <button name="action_view_children_requests" class="oe_stat_button"
-                        icon="fa-wrench" type="object" attrs="{'invisible': [('child_ids', '=', [])]}">
-                    <field name="children_count" widget="statinfo" string="Issues"/>
+                <field name="child_ids" invisible="1" />
+                <button
+                    name="action_view_children_requests"
+                    class="oe_stat_button"
+                    icon="fa-wrench"
+                    type="object"
+                    attrs="{'invisible': [('child_ids', '=', [])]}"
+                >
+                    <field name="children_count" widget="statinfo" string="Issues" />
                 </button>
             </div>
         </field>
     </record>
-
     <record model="ir.ui.view" id="hr_equipment_request_view_search">
-        <field name="name">maintenance.request.form (in maintenance_equipment_purchase)</field>
+        <field
+            name="name"
+        >maintenance.request.form (in maintenance_equipment_purchase)</field>
         <field name="model">maintenance.request</field>
-        <field name="inherit_id" ref="cb_maintenance.hr_equipment_request_view_search"/>
+        <field
+            name="inherit_id"
+            ref="cb_maintenance.hr_equipment_request_view_search"
+        />
         <field name="arch" type="xml">
             <filter name="corrective" position="after">
-                <filter name="project" string="Project Issues" domain="[('is_project', '=', True)]"/>
+                <filter
+                    name="project"
+                    string="Project Issues"
+                    domain="[('is_project', '=', True)]"
+                />
             </filter>
             <filter name="corrective" position="attributes">
-                <attribute name="domain">[('is_project', '=', False), ('maintenance_type', '=', 'corrective')]</attribute>
+                <attribute
+                    name="domain"
+                >[('is_project', '=', False), ('maintenance_type', '=', 'corrective')]</attribute>
             </filter>
             <filter name="preventive" position="attributes">
-                <attribute name="domain">[('is_project', '=', False), ('maintenance_type', '=', 'preventive')]</attribute>
+                <attribute
+                    name="domain"
+                >[('is_project', '=', False), ('maintenance_type', '=', 'preventive')]</attribute>
             </filter>
         </field>
     </record>
-
     <record model="ir.actions.act_window" id="maintenance_project_act_window">
         <field name="name">Maintenance Project</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">maintenance.request</field>
         <field name="view_mode">kanban,tree,form</field>
-        <field name="domain">[('is_project', '=', True), ('parent_id', '=', False)]</field>
-        <field name="context">{'default_is_project': 1, 'default_maintenance_type': 0}</field>
+        <field
+            name="domain"
+        >[('is_project', '=', True), ('parent_id', '=', False)]</field>
+        <field
+            name="context"
+        >{'default_is_project': 1, 'default_maintenance_type': 0}</field>
     </record>
-
     <record model="ir.actions.act_window" id="maintenance.hr_equipment_request_action">
-        <field name="domain">['|', ('is_project', '=', False), ('parent_id', '!=', False)]</field>
+        <field
+            name="domain"
+        >['|', ('is_project', '=', False), ('parent_id', '!=', False)]</field>
     </record>
-
-    <record id="maintenance.hr_equipment_todo_request_action_from_dashboard" model="ir.actions.act_window">
+    <record
+        id="maintenance.hr_equipment_todo_request_action_from_dashboard"
+        model="ir.actions.act_window"
+    >
         <field name="view_mode">tree,kanban,form</field>
-        <field name="view_id" eval="False"/>
+        <field name="view_id" eval="False" />
         <field name="domain">[
             '|', ('is_project', '=', False), ('parent_id', '!=', False),
             ('maintenance_team_id', 'child_of', active_id),
@@ -130,13 +200,14 @@
             }
         </field>
     </record>
-
     <record model="ir.ui.menu" id="maintenance_project_menu">
         <field name="name">Maintenance Projects</field>
-        <field name="parent_id" ref="maintenance.menu_maintenance_title"/>
-        <field name="sequence" eval="15"/>
-        <field name="groups_id" eval="[(6, 0, [ref('maintenance.group_equipment_manager')])]"/>
-        <field name="action" ref="maintenance_project_act_window"/>
+        <field name="parent_id" ref="maintenance.menu_maintenance_title" />
+        <field name="sequence" eval="15" />
+        <field
+            name="groups_id"
+            eval="[(6, 0, [ref('maintenance.group_equipment_manager')])]"
+        />
+        <field name="action" ref="maintenance_project_act_window" />
     </record>
-
 </odoo>
