--- a/cb_maintenance_project/wizards/wizard_create_project_issue.xml
+++ b/cb_maintenance_project/wizards/wizard_create_project_issue.xml
@@ -1,40 +1,43 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <!-- Copyright 2019 Creu Blanca
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
-
 <odoo>
-
     <record model="ir.ui.view" id="wizard_create_project_issue_form_view">
-        <field name="name">wizard.create.project.issue.form (in cb_maintenance_project)</field>
+        <field
+            name="name"
+        >wizard.create.project.issue.form (in cb_maintenance_project)</field>
         <field name="model">wizard.create.project.issue</field>
         <field name="arch" type="xml">
             <form string="Create Project Issue">
                 <group>
                     <group>
-                        <field name="request_id"/>
-                        <field name="name"/>
+                        <field name="request_id" />
+                        <field name="name" />
                     </group>
                     <group>
-                        <field name="location_id" widget="child_selector" options="{'child_selection_field': 'name'}"/>
-                        <field name="priority" widget="priority"/>
+                        <field
+                            name="location_id"
+                            widget="child_selector"
+                            options="{'child_selection_field': 'name'}"
+                        />
+                        <field name="priority" widget="priority" />
                     </group>
                 </group>
                 <group>
-                    <field name="description"/>
+                    <field name="description" />
                 </group>
                 <footer>
-                    <button name="create_request"
-                            string="Create Issue"
-                            class="btn-primary"
-                            type="object"/>
-                    <button string="Cancel"
-                            class="btn-default"
-                            special="cancel"/>
+                    <button
+                        name="create_request"
+                        string="Create Issue"
+                        class="btn-primary"
+                        type="object"
+                    />
+                    <button string="Cancel" class="btn-default" special="cancel" />
                 </footer>
             </form>
         </field>
     </record>
-
     <record model="ir.actions.act_window" id="wizard_create_project_issue_act_window">
         <field name="name">Create Project Issue</field>
         <field name="res_model">wizard.create.project.issue</field>
@@ -42,5 +45,4 @@
         <field name="context">{'default_request_id': active_id}</field>
         <field name="target">new</field>
     </record>
-
 </odoo>
