--- a/maintenance_request_tags/views/maintenance_equipment.xml
+++ b/maintenance_request_tags/views/maintenance_equipment.xml
@@ -1,16 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <!-- Copyright 2020 Creu Blanca
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
-
 <odoo>
-
     <record model="ir.ui.view" id="hr_equipment_view_form">
-        <field name="name">maintenance.equipment.form (in maintenance_request_tags)</field>
+        <field
+            name="name"
+        >maintenance.equipment.form (in maintenance_request_tags)</field>
         <field name="model">maintenance.equipment</field>
-        <field name="inherit_id" ref="maintenance_plan.hr_equipment_view_form"/>
+        <field name="inherit_id" ref="maintenance_plan.hr_equipment_view_form" />
         <field name="arch" type="xml">
             <xpath expr="//tree/field[@name='maintenance_team_id']" position="after">
-                <field name="tag_ids" widget="many2many_tags" options="{'no_create': True, 'no_open': True}"/>
+                <field
+                    name="tag_ids"
+                    widget="many2many_tags"
+                    options="{'no_create': True, 'no_open': True}"
+                />
             </xpath>
         </field>
     </record>
