--- a/maintenance_request_tags/views/maintenance_request.xml
+++ b/maintenance_request_tags/views/maintenance_request.xml
@@ -1,56 +1,69 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <!-- Copyright 2019 Creu Blanca
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
-
 <odoo>
-
     <record model="ir.ui.view" id="hr_equipment_request_view_form">
-        <field name="name">maintenance.request.form (in maintenance_request_tags)</field>
+        <field
+            name="name"
+        >maintenance.request.form (in maintenance_request_tags)</field>
         <field name="model">maintenance.request</field>
-        <field name="inherit_id" ref="maintenance.hr_equipment_request_view_form"/>
+        <field name="inherit_id" ref="maintenance.hr_equipment_request_view_form" />
         <field name="arch" type="xml">
             <xpath expr="//div[hasclass('oe_title')]" position="after">
-                <field name="selectable_tags_ids" invisible="1"/>
-                <field name="tag_ids" widget="many2many_tags"
-                       options="{'color_field': 'color', 'no_edit': True, 'no_create': True}"
-                       placeholder="e.g. Computers" domain="['|', ('id', 'in', selectable_tags_ids), ('selectable_team_count', '=', 0)]"
+                <field name="selectable_tags_ids" invisible="1" />
+                <field
+                    name="tag_ids"
+                    widget="many2many_tags"
+                    options="{'color_field': 'color', 'no_edit': True, 'no_create': True}"
+                    placeholder="e.g. Computers"
+                    domain="['|', ('id', 'in', selectable_tags_ids), ('selectable_team_count', '=', 0)]"
                 />
             </xpath>
         </field>
     </record>
-
     <record id="hr_equipment_request_view_kanban" model="ir.ui.view">
-        <field name="name">maintenance.request.kanban (in maintenance_request_tags)</field>
+        <field
+            name="name"
+        >maintenance.request.kanban (in maintenance_request_tags)</field>
         <field name="model">maintenance.request</field>
-        <field name="inherit_id" ref="maintenance.hr_equipment_request_view_kanban"/>
+        <field name="inherit_id" ref="maintenance.hr_equipment_request_view_kanban" />
         <field name="arch" type="xml">
             <xpath expr="//div[hasclass('o_kanban_record_top')]" position="after">
-                <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                <field
+                    name="tag_ids"
+                    widget="many2many_tags"
+                    options="{'color_field': 'color'}"
+                />
             </xpath>
         </field>
     </record>
-
     <record model="ir.ui.view" id="hr_equipment_request_view_tree">
-        <field name="name">maintenance.request.tree (in maintenance_request_tags)</field>
+        <field
+            name="name"
+        >maintenance.request.tree (in maintenance_request_tags)</field>
         <field name="model">maintenance.request</field>
-        <field name="inherit_id" ref="maintenance.hr_equipment_request_view_tree"/>
+        <field name="inherit_id" ref="maintenance.hr_equipment_request_view_tree" />
         <field name="arch" type="xml">
             <field name="name" position="after">
-                <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                <field
+                    name="tag_ids"
+                    widget="many2many_tags"
+                    options="{'color_field': 'color'}"
+                />
             </field>
         </field>
     </record>
-
     <record model="ir.ui.view" id="hr_equipment_request_view_search">
-        <field name="name">maintenance.request.search (in maintenance_request_tags)</field>
+        <field
+            name="name"
+        >maintenance.request.search (in maintenance_request_tags)</field>
         <field name="model">maintenance.request</field>
-        <field name="inherit_id" ref="maintenance.hr_equipment_request_view_search"/>
+        <field name="inherit_id" ref="maintenance.hr_equipment_request_view_search" />
         <field name="arch" type="xml">
             <field name="name" position="after">
-                <field name="selectable_tags_ids" invisible="1"/>
-                <field name="tag_ids"/>
+                <field name="selectable_tags_ids" invisible="1" />
+                <field name="tag_ids" />
             </field>
         </field>
     </record>
-
 </odoo>
