--- a/maintenance_request_tags/views/maintenance_team.xml
+++ b/maintenance_request_tags/views/maintenance_team.xml
@@ -1,30 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <!-- Copyright 2019 Creu Blanca
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
-
 <odoo>
-
     <record model="ir.ui.view" id="maintenance_team_form_view">
         <field name="name">maintenance.team.form (in maintenance_request_tags)</field>
         <field name="model">maintenance.team</field>
-        <field name="inherit_id" ref="maintenance.maintenance_team_view_form"/>
+        <field name="inherit_id" ref="maintenance.maintenance_team_view_form" />
         <field name="arch" type="xml">
             <field name="member_ids" position="after">
-                <field name="selectable_tags_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                <field
+                    name="selectable_tags_ids"
+                    widget="many2many_tags"
+                    options="{'color_field': 'color'}"
+                />
             </field>
         </field>
     </record>
-
-
     <record model="ir.ui.view" id="maintenance_team_tree_view">
         <field name="name">maintenance.team.tree (in maintenance_request_tags)</field>
         <field name="model">maintenance.team</field>
-        <field name="inherit_id" ref="maintenance.maintenance_team_view_tree"/>
+        <field name="inherit_id" ref="maintenance.maintenance_team_view_tree" />
         <field name="arch" type="xml">
             <field name="name" position="after">
-                <field name="selectable_tags_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                <field
+                    name="selectable_tags_ids"
+                    widget="many2many_tags"
+                    options="{'color_field': 'color'}"
+                />
             </field>
         </field>
     </record>
-
 </odoo>
