--- a/cb_maintenance/views/maintenance_request.xml
+++ b/cb_maintenance/views/maintenance_request.xml
@@ -158,6 +158,9 @@
             <field name="custom_info_template_id" position="attributes">
                 <attribute name="invisible">1</attribute>
             </field>
+            <field name="owner_user_id" position="attributes">
+                <attribute name="invisible">0</attribute>
+            </field>
         </field>
     </record>
     <record model="ir.ui.view" id="hr_equipment_request_manager_view_form">
