[IMP] cb_maintenance: tree with schedule_info field

--- a/cb_maintenance/views/maintenance_request.xml
+++ b/cb_maintenance/views/maintenance_request.xml
@@ -208,6 +208,7 @@
                     name="technician_id"
                     groups="maintenance.group_equipment_manager"
                 />
+                <field name="schedule_info" />
             </field>
         </field>
     </record>
