[IMP] cb_maintenance: replace schedule_info by schedule_date

--- a/cb_maintenance/views/maintenance_request.xml
+++ b/cb_maintenance/views/maintenance_request.xml
@@ -208,7 +208,7 @@
                     name="technician_id"
                     groups="maintenance.group_equipment_manager"
                 />
-                <field name="schedule_info" />
+                <field name="schedule_date" />
             </field>
         </field>
     </record>
